crates/fortitude_linter/src/rules/portability/snapshots/fortitude_linter__rules__portability__tests__gfortran-random-extension_PORT062.f90.snap
---
source: crates/fortitude_linter/src/rules/portability/mod.rs
expression: diagnostics
---
PORT062 possible gfortran extension function 'srand'
  --> ./resources/test/fixtures/portability/PORT062.f90:29:8
   |
27 |   implicit none
28 |   integer,parameter :: seed = 86456
29 |   call srand(seed)
   |        ^^^^^
30 |   print *, rand(), rand()
31 |   print *, rand(seed)
   |
help: Use Fortran standard intrinsic `random_seed` instead. See docs for examples.

PORT062 possible gfortran extension function 'rand'
  --> ./resources/test/fixtures/portability/PORT062.f90:30:12
   |
28 |   integer,parameter :: seed = 86456
29 |   call srand(seed)
30 |   print *, rand(), rand()
   |            ^^^^
31 |   print *, rand(seed)
32 | end program test_rand
   |
help: Use Fortran standard intrinsic `random_number` instead. See docs for examples.

PORT062 possible gfortran extension function 'rand'
  --> ./resources/test/fixtures/portability/PORT062.f90:30:20
   |
28 |   integer,parameter :: seed = 86456
29 |   call srand(seed)
30 |   print *, rand(), rand()
   |                    ^^^^
31 |   print *, rand(seed)
32 | end program test_rand
   |
help: Use Fortran standard intrinsic `random_number` instead. See docs for examples.

PORT062 possible gfortran extension function 'rand'
  --> ./resources/test/fixtures/portability/PORT062.f90:31:12
   |
29 |   call srand(seed)
30 |   print *, rand(), rand()
31 |   print *, rand(seed)
   |            ^^^^
32 | end program test_rand
   |
help: Use Fortran standard intrinsic `random_number` instead. See docs for examples.
