crates/fortitude_linter/src/rules/portability/snapshots/fortitude_linter__rules__portability__tests__invalid-character_PORT032.f90.snap
---
source: crates/fortitude_linter/src/rules/portability/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/portability/PORT032.f90:3:18: PORT032 Invalid character 'ç'
  |
1 | program invalid_tab
2 |   implicit none
3 |   logical :: français = .true.
  |                  ^ PORT032
4 |   print*, "Don't flag this: é"
5 |   ! Or this:|é|
  |
