crates/fortitude_linter/src/rules/portability/snapshots/fortitude_linter__rules__portability__tests__literal-kind-suffix_PORT012.f90.snap
---
source: crates/fortitude_linter/src/rules/portability/mod.rs
expression: diagnostics
snapshot_kind: text
---
PORT012 '1_1' has literal kind suffix '1'
 --> ./resources/test/fixtures/portability/PORT012.f90:4:38
  |
2 |   use, intrinsic :: iso_fortran_env, only: sp => real32, dp => real64, qp => real128, int8, int16, int32, int64
3 |
4 |   integer(int8), parameter :: i1 = 1_1
  |                                      ^
5 |   integer(int16), parameter :: i2 = -1_2
6 |   integer(int32), parameter :: i3 = 2_4
  |
help: Use the parameter 'int8' from 'iso_fortran_env'

PORT012 '1_2' has literal kind suffix '2'
 --> ./resources/test/fixtures/portability/PORT012.f90:5:40
  |
4 |   integer(int8), parameter :: i1 = 1_1
5 |   integer(int16), parameter :: i2 = -1_2
  |                                        ^
6 |   integer(int32), parameter :: i3 = 2_4
7 |   integer(int64), parameter :: i4 = -2_8
  |
help: Use the parameter 'int16' from 'iso_fortran_env'

PORT012 '2_4' has literal kind suffix '4'
 --> ./resources/test/fixtures/portability/PORT012.f90:6:39
  |
4 |   integer(int8), parameter :: i1 = 1_1
5 |   integer(int16), parameter :: i2 = -1_2
6 |   integer(int32), parameter :: i3 = 2_4
  |                                       ^
7 |   integer(int64), parameter :: i4 = -2_8
8 |   integer(int8), parameter :: i5 = 1_int8
  |
help: Use the parameter 'int32' from 'iso_fortran_env'

PORT012 '2_8' has literal kind suffix '8'
 --> ./resources/test/fixtures/portability/PORT012.f90:7:40
  |
5 |   integer(int16), parameter :: i2 = -1_2
6 |   integer(int32), parameter :: i3 = 2_4
7 |   integer(int64), parameter :: i4 = -2_8
  |                                        ^
8 |   integer(int8), parameter :: i5 = 1_int8
9 |   integer(int16), parameter :: i6 = -1_int16
  |
help: Use the parameter 'int64' from 'iso_fortran_env'

PORT012 '1.234567_4' has literal kind suffix '4'
  --> ./resources/test/fixtures/portability/PORT012.f90:13:40
   |
11 |   integer(int64), parameter :: i8 = -2_int64
12 |
13 |   real(sp), parameter :: x1 = 1.234567_4
   |                                        ^
14 |   real(dp), parameter :: x2 = 1.234567_dp
15 |   real(dp), parameter :: x3 = 1.789d3
   |
help: Use the parameter 'real32' from 'iso_fortran_env'

PORT012 '9.876_8' has literal kind suffix '8'
  --> ./resources/test/fixtures/portability/PORT012.f90:16:37
   |
14 |   real(dp), parameter :: x2 = 1.234567_dp
15 |   real(dp), parameter :: x3 = 1.789d3
16 |   real(dp), parameter :: x4 = 9.876_8
   |                                     ^
17 |   real(sp), parameter :: x5 = 2.468e-1_sp
18 |   real(qp), parameter :: x6 = 9.876_16
   |
help: Use the parameter 'real64' from 'iso_fortran_env'

PORT012 '9.876_16' has literal kind suffix '16'
  --> ./resources/test/fixtures/portability/PORT012.f90:18:37
   |
16 |   real(dp), parameter :: x4 = 9.876_8
17 |   real(sp), parameter :: x5 = 2.468e-1_sp
18 |   real(qp), parameter :: x6 = 9.876_16
   |                                     ^^
19 |   real(qp), parameter :: x7 = 9.876e12_sp
20 |   real(qp), parameter :: x8 = 9.876e-12_16
   |
help: Use the parameter 'real128' from 'iso_fortran_env'

PORT012 '9.876e-12_16' has literal kind suffix '16'
  --> ./resources/test/fixtures/portability/PORT012.f90:20:41
   |
18 |   real(qp), parameter :: x6 = 9.876_16
19 |   real(qp), parameter :: x7 = 9.876e12_sp
20 |   real(qp), parameter :: x8 = 9.876e-12_16
   |                                         ^^
21 | end program
   |
help: Use the parameter 'real128' from 'iso_fortran_env'
