crates/fortitude_linter/src/rules/portability/snapshots/fortitude_linter__rules__portability__tests__non-portable-exit-call_PORT063.f90_f95.snap
---
source: crates/fortitude_linter/src/rules/portability/mod.rs
expression: diagnostics
---
PORT063 [*] Use of non-portable `exit` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:19:1
   |
17 | integer :: ierr
18 | ierr = 1
19 | call exit  ! non-standard
   | ^^^^^^^^^
20 | call exit()  ! non-standard
21 | call exit(1)  ! non-standard
   |
help: Replace with `stop`
16 | implicit none
17 | integer :: ierr
18 | ierr = 1
   - call exit  ! non-standard
19 + stop  ! non-standard
20 | call exit()  ! non-standard
21 | call exit(1)  ! non-standard
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
note: This is an unsafe fix and may change runtime behavior

PORT063 [*] Use of non-portable `exit` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:20:1
   |
18 | ierr = 1
19 | call exit  ! non-standard
20 | call exit()  ! non-standard
   | ^^^^^^^^^^^
21 | call exit(1)  ! non-standard
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
   |
help: Replace with `stop`
17 | integer :: ierr
18 | ierr = 1
19 | call exit  ! non-standard
   - call exit()  ! non-standard
20 + stop  ! non-standard
21 | call exit(1)  ! non-standard
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
23 | call EXIT(ierr)  ! non-standard
note: This is an unsafe fix and may change runtime behavior

PORT063 [*] Use of non-portable `exit` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:21:1
   |
19 | call exit  ! non-standard
20 | call exit()  ! non-standard
21 | call exit(1)  ! non-standard
   | ^^^^^^^^^^^^
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
23 | call EXIT(ierr)  ! non-standard
   |
help: Replace with `stop`
18 | ierr = 1
19 | call exit  ! non-standard
20 | call exit()  ! non-standard
   - call exit(1)  ! non-standard
21 + stop 1  ! non-standard
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
23 | call EXIT(ierr)  ! non-standard
24 | call exit(status=2)  ! non-standard
note: This is an unsafe fix and may change runtime behavior

PORT063 Use of non-portable `exit` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:22:1
   |
20 | call exit()  ! non-standard
21 | call exit(1)  ! non-standard
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
   | ^^^^^^^^^^^^^^^^^
23 | call EXIT(ierr)  ! non-standard
24 | call exit(status=2)  ! non-standard
   |
help: Replace with `stop`

PORT063 Use of non-portable `exit` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:23:1
   |
21 | call exit(1)  ! non-standard
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
23 | call EXIT(ierr)  ! non-standard
   | ^^^^^^^^^^^^^^^
24 | call exit(status=2)  ! non-standard
25 | call abort  ! non-standard
   |
help: Replace with `stop`

PORT063 Use of non-portable `exit` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:24:1
   |
22 | call exit(123456)  ! non-standard, 6 digits: no fix below F2008
23 | call EXIT(ierr)  ! non-standard
24 | call exit(status=2)  ! non-standard
   | ^^^^^^^^^^^^^^^^^^^
25 | call abort  ! non-standard
26 | call abort(1)  ! non-standard
   |
help: Replace with `stop`

PORT063 Use of non-portable `abort` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:25:1
   |
23 | call EXIT(ierr)  ! non-standard
24 | call exit(status=2)  ! non-standard
25 | call abort  ! non-standard
   | ^^^^^^^^^^
26 | call abort(1)  ! non-standard
27 | call abort(123456)  ! non-standard
   |
help: Replace with `error stop`

PORT063 Use of non-portable `abort` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:26:1
   |
24 | call exit(status=2)  ! non-standard
25 | call abort  ! non-standard
26 | call abort(1)  ! non-standard
   | ^^^^^^^^^^^^^
27 | call abort(123456)  ! non-standard
28 | call abort("message")  ! non-standard
   |
help: Replace with `error stop`

PORT063 Use of non-portable `abort` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:27:1
   |
25 | call abort  ! non-standard
26 | call abort(1)  ! non-standard
27 | call abort(123456)  ! non-standard
   | ^^^^^^^^^^^^^^^^^^
28 | call abort("message")  ! non-standard
29 | call abort(ierr)  ! non-standard
   |
help: Replace with `error stop`

PORT063 Use of non-portable `abort` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:28:1
   |
26 | call abort(1)  ! non-standard
27 | call abort(123456)  ! non-standard
28 | call abort("message")  ! non-standard
   | ^^^^^^^^^^^^^^^^^^^^^
29 | call abort(ierr)  ! non-standard
30 | call abort(1, 2)  ! non-standard, more than one argument
   |
help: Replace with `error stop`

PORT063 Use of non-portable `abort` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:29:1
   |
27 | call abort(123456)  ! non-standard
28 | call abort("message")  ! non-standard
29 | call abort(ierr)  ! non-standard
   | ^^^^^^^^^^^^^^^^
30 | call abort(1, 2)  ! non-standard, more than one argument
31 | do
   |
help: Replace with `error stop`

PORT063 Use of non-portable `abort` subroutine
  --> ./resources/test/fixtures/portability/PORT063.f90:30:1
   |
28 | call abort("message")  ! non-standard
29 | call abort(ierr)  ! non-standard
30 | call abort(1, 2)  ! non-standard, more than one argument
   | ^^^^^^^^^^^^^^^^
31 | do
32 |   exit  ! loop exit, should not trigger
   |
help: Replace with `error stop`
