crates/fortitude_linter/src/rules/portability/snapshots/fortitude_linter__rules__portability__tests__non-portable-io-unit_PORT001.f90_no_cray_units.snap
---
source: crates/fortitude_linter/src/rules/portability/mod.rs
expression: diagnostics
---
./resources/test/fixtures/portability/PORT001.f90:5:10: PORT001 Non-portable unit '6' in 'write' statement
  |
3 |   integer :: i, named_unit
4 |
5 |   write (6,*) "enter an integer"
  |          ^ PORT001
6 |   read (unit=5,fmt=*) i
7 |   write(fmt=*, unit=6) "thanks"
  |
  = help: Use `output_unit` from `iso_fortran_env`

./resources/test/fixtures/portability/PORT001.f90:6:14: PORT001 Non-portable unit '5' in 'read' statement
  |
5 |   write (6,*) "enter an integer"
6 |   read (unit=5,fmt=*) i
  |              ^ PORT001
7 |   write(fmt=*, unit=6) "thanks"
  |
  = help: Use `input_unit` from `iso_fortran_env`

./resources/test/fixtures/portability/PORT001.f90:7:21: PORT001 Non-portable unit '6' in 'write' statement
  |
5 |   write (6,*) "enter an integer"
6 |   read (unit=5,fmt=*) i
7 |   write(fmt=*, unit=6) "thanks"
  |                     ^ PORT001
8 |
9 |   open(newunit=named_unit, file="test.txt", action="write")
  |
  = help: Use `output_unit` from `iso_fortran_env`

./resources/test/fixtures/portability/PORT001.f90:17:9: PORT001 Non-portable unit '0' in 'write' statement
   |
15 |   close(17)
16 |
17 |   write(0, *) "this is stderr"
   |         ^ PORT001
18 |
19 |   ! Cray file units
   |
   = help: Use `error_unit` from `iso_fortran_env`
